[package]
name = "resonance_2"
version = "0.1.0"
edition = "2024"

[dependencies]
macroquad = "0.4.14"
rayon = { version = "1.7", optional = true }
serde = { version = "1.0", features = ["derive"] }
   serde_json = "1.0"


[features]
scale = []
default = ["native"]  # Default feature includes "native"
native = ["rayon"]    # The "native" feature enables Rayon

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon = "1.7"  # Rayon is only included for native builds

[target.'cfg(target_arch = "wasm32")'.dependencies]
   wasm-bindgen = "0.2"
   wasm-bindgen-futures = "0.4"
   js-sys = "0.3"
   web-sys = { version = "0.3", features = [
       "Window",
       "Request",
       "RequestInit",
       "RequestMode",
       "Headers",
       "Response",
   ] }
